# echo-ai

./: package-lock.json  package.json  pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/src/: app_module.py  app_service.py
backend/src/voice/: voice_controller.py  voice_model.py  voice_module.py  voice_service.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/voice-chat/: route.ts
